examples/scope.ayl
egg x = 4

ayla x == 4 {
    egg y = 2
    putln(y) // 2

    x = 3
    putln(x) // 3

    egg x = 2
    putln(x) // 2
}

putln(x) // 3

putln(y) // error: undefined